--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://chewonithard.github.io/monsters-rolodex",
